# adscope

./: .dockerignore  .env.example  .gitignore  .railwayignore  AdScope_개발문서.md  AdScope_서비스소개.md  AdScope_설계문서_v1.0.docx  DEEPSEEK_ADSCOPE.txt  Dockerfile  INVENTOR_GUIDE.md  NEXT_START_HANDOVER.md  OPENROUTER_API.txt  PLAYSTORE_GUIDE.md  SESSION_RESUME.md  SETUP_GUIDE.txt  STABILITY_PRESERVATION_MODE.MD  TODO_20260217.txt  _advs_dump.json  _advs_no_website.json  _brand_map.json  _tmp_campaigns.json  _tmp_ind.json  _website_map.json  adscope.db-shm  adscope_build.md  alembic.ini  backend_check.err  backend_retry.err  backend_verify.err  brand_urls.txt  build_log.txt  comparison_results.json  debug_coupang.html  docker-compose.yml  facebook_id.txt  ig_cookies.json  instagram_id.txt  inventor-start.bat  oracle_ssh_key  oracle_ssh_key.pub  (+18 more)
.claudesettings.json/: settings.json
api/: deps.py  event_bus.py  logging_config.py  main.py
crawler/: base_crawler.py  brand_monitor.py  config.py  cookie_store.py  google_gdn.py  google_search_ads.py  instagram_catalog.py  kakao_da.py  landing_resolver.py  media_targets.py  meta_library.py  naver_da.py  naver_search.py  naver_shopping.py  social_stats_crawler.py  stealth_patch.py  tiktok_ads.py  youtube_ads.py  youtube_surf.py
data/: ad_networks_discovery.json  advertiser_seed.json  advertiser_seed_backup_217.json  kr_ad_platforms_master.json
database/: __init__.py  models.py  schemas.py
frontend/: .env.production  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
(+356 files in other folders)
